tests/cases/traits/errors/structural-capability-generic-alias-missing.ari
type Combiner[T] = has add(T) -> T;

struct Packet {
  value: i64,
}

fn combine_i64[T: Combiner[i64]](value: T) -> i64 {
  value.add(1)
}

fn main() -> i64 {
  return combine_i64(Packet { value: 0 });
}
